<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="header_name">Playlist maker</string>
    <string name="button_text_search">Поиск</string>
    <string name="button_text_media">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="call_center_text">Написать в поддержку</string>
    <string name="user_agreement_text">Пользовательское соглашение</string>
    <!-- Ссылки -->
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developer_course_link">https://practicum.yandex.ru/android-developer</string>
    <!-- Данные для отправки на email -->
    <string name="email_student">combine696@yandex.ru</string>
    <string name="theme_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="title_choose">Выберите приложение для отправки:</string>

    <string name="track_not_found_text">Ничего не нашлось</string>
    <string name="track_no_ethernet_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reset_text">Обновить</string>
    <string name="you_search_text">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="not_available">Ничего не найдено</string>
    <string name="text_timer_track_player">00:00</string>
    <string name="text_title_track_time_player">Длительность</string>
    <string name="text_title_album_track_player">Альбом</string>
    <string name="text_title_year_track_player">Год</string>
    <string name="text_title_style_track_player">Жанр</string>
    <string name="text_title_country_track_player">Страна</string>
</resources>