<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_16_dp"
    style="@style/background_activity_main_color_style">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_marginBottom="@dimen/size_28_dp"
        style="@style/match_wrap_content"
        app:title="@string/header_name"
        app:titleTextColor="@color/white"
        app:contentInsetStart="@dimen/size_zero_dp"
        app:titleTextAppearance="@style/header_main_screen"
        >
    </com.google.android.material.appbar.MaterialToolbar>
    <Button
        android:id="@+id/search_button_main_screen"
        android:text="@string/button_text_search"
        style="@style/buttons_main_activity"
        app:icon="@drawable/ic_magnifier_19"
        />

    <Button
        android:id="@+id/media"
        android:text="@string/button_text_media"
        style="@style/buttons_main_activity"
        app:icon="@drawable/ic_media_20"
        />
    <Button
        android:id="@+id/settings"
        android:layout_marginBottom="@dimen/size_12_dp"
        android:text="@string/text_settings"
        style="@style/buttons_main_activity"
        app:icon="@drawable/ic_settings_20"
        />
</LinearLayout>