<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingsActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4_dp"
        android:layout_marginStart="@dimen/size_4_dp"
        android:id="@+id/arrow_back"
        app:title="@string/text_settings"
        app:titleTextAppearance="@style/header_settings_screen"
        app:navigationIcon="@drawable/arrow_back">
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24_dp"
        android:paddingHorizontal="@dimen/size_16_dp"
        android:paddingVertical="@dimen/size_20_dp"
        android:text="@string/dark_theme_text"
        android:textSize="@dimen/size_16_sp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ethernet"
        android:paddingHorizontal="@dimen/size_16_dp"
        android:paddingVertical="@dimen/size_20_dp"
        android:text="@string/share_text"
        android:textSize="@dimen/size_16_sp"
        android:textColor="@color/black_title_settings"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/call_center"
        android:paddingHorizontal="@dimen/size_16_dp"
        android:paddingVertical="@dimen/size_20_dp"
        android:text="@string/call_center_text"
        android:textSize="@dimen/size_16_sp"
        android:textColor="@color/black_title_settings"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_4_dp"
        android:text="@string/user_agreement_text"
        android:textColor="@color/black_title_settings"
        android:textSize="@dimen/size_16_sp"
        android:paddingHorizontal="@dimen/size_16_dp"
        android:paddingVertical="@dimen/size_20_dp"
        android:drawableEnd="@drawable/arrow_forward"
        />
</LinearLayout>